--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:h2:mem:testdb
+cloud.name=dyy4yedej
+cloud.secret=5PAxUQ2FFVwkQeva5Y35mCFrANo
+cloud.key=514613814622646
